# pharma-ad-studio

./: README.md
client/: .eslintrc.js  app.json  package.json
client/app/: _layout.tsx  result.tsx
client/app/(tabs)/: _layout.tsx  index.tsx  projects.tsx  settings.tsx
client/components/: BenefitsList.tsx  FormInput.tsx  ToneSelector.tsx
client/constants/: api.ts  theme.ts
client/lib/: api.ts
client/store/: useAdStore.ts
client/types/: index.ts
server/: .env.example  pyproject.toml  requirements.txt
server/app/: main.py
server/app/agents/: ad_graph.py  llm.py  prompts.py
server/app/api/routes/: ads.py  health.py
server/app/core/: config.py
server/app/schemas/: ad_request.py  ad_response.py
server/tests/: test_health.py
